Checkpoint for cross computer. Broken run doing txn with broken memos encoding.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,7 +33,7 @@ com.odenzo.rippled.utils {
 
         {
             label = "My Account By Name"
-            name = "~odenzo"          // These are deprecated now?
+            name = "~odenzo"        
         }
 
     ]
